Little code fix